--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link href="https://gangerator.netlify.app/fonts/altehaasgrotesk/altehaasgrotesk.css" rel="stylesheet">
 <style>
   html { font: 21px/28px 'alte_haas_grotesk', helvetica, sans-serif; color: black; }
-  body { background-color: #62f69c; padding-bottom: 28px; margin: 1em; }
+  body { background-color: #62f69c; padding: 1em; }
 
   h1 { font: bold 48px 'alte_haas_grotesk', sans-serif; text-transform: uppercase; }
   h2 { font: bold 36px 'alte_haas_grotesk', sans-serif; }
