--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   h2 { font: bold 36px 'alte_haas_grotesk', sans-serif; }
   h3 { font: bold 24px 'alte_haas_grotesk', sans-serif; }
 
-.content {padding: 1px 16px 28px 16px; max-width: 800px; }
+.content {padding: 1px 16px 28px 16px; max-width: 800px; margin: 0 auto; }
 
   .button {
   background: black;
