--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html> <html>
 <meta charset="utf-8">
-<title>Perchance</title>
+<title>TRASH CREEPS: GANGERATOR</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <base href="https://perchance.org/" target="_parent">
 <meta name="referrer" content="no-referrer">
